--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ frontendweb-build/
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+#csharp
+/backend/.vs
