add authorization with JwtBearer token

--- a/backend/GotIt-back/appsettings.json
+++ b/backend/GotIt-back/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "8F1CBD94-856D-4CC7-B72F-55F8BABBAED5",
+    "Issuer": "https://localhost:7229",
+    "Audience": "https://localhost:7229"
+  },
   "AllowedHosts": "*"
 }
