--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-navigation/bottom-tabs": "^6.5.10",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.14",
     "axios": "^1.4.0",
@@ -17,8 +19,9 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "^0.71.14",
     "react-native-pell-rich-editor": "^1.9.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.18.11"
   },
   "devDependencies": {
