--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
@@ -20,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.71.14",
+    "react-native-image-picker": "^7.0.2",
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.18.11"
